bicep/openshift-deploy/ocp-manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels: 
    kubernetes.io/metadata.name: NSNAME
  name: NSNAME
