bicep/openshift-deploy/ocp-manifests/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: graphql-gateway
  namespace: NSNAME
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - NSNAME.apps.DOMAIN
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: iwtls-secret 
      mode: SIMPLE
